--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@
         <section id="resources">
             <h2>مزيد من المصادر</h2>
             <p>لتعلم المزيد عن Nmap واستخداماتها، يمكنك الاطلاع على الوثائق الرسمية والمصادر التعليمية الأخرى.</p>
+       
+<a href="https://nmap.org/">هنا موقع الاداه</a>
         </section>
 
     </div>
