--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
 
         <section id="resources">
             <h2>مزيد من المصادر</h2>
-            <p>لتعلم المزيد عن Nmap واستخداماتها، يمكنك الاطلاع على الوثائق الرسمية والمصادر التعليمية الأخرى.</p>
+            <p>لتعلم المزيد عن Nmap واستخداماتها، يمكنك الاطلاع على الوثائق الرسمية والمصادر التعليمية الأخرى.<a href="https://nmap.org/">هنا موقع الاداه</a></p>
        
-<a href="https://nmap.org/">هنا موقع الاداه</a>
+
         </section>
 
     </div>
